2010-11-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_treeview
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_transl8tools
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_transferdata
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_timetracknull
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_timetrack
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tcemain
	* Fixed bug #16558: tcemain: wrong variables used due copy&paste
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tceforms_inline
	* Fixed bug #16557: Wrong variables in tceforms_inline
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tceforms_fe
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_tceforms
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_syntaxhl
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_svbase
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_superadmin
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_stdgraphic
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_sqlparser
	* Fixed bug #16556: error in t3lib_sqlparser - missing second parameter in functioncall parseError
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_sqlengine
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_spritemanager
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_softrefproc
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_scbase
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_rteapi
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_registry
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_refindex
	* Fixed bug #14050: CleanUp - CGL format of t3lib files - t3lib_recordlist